apps/devpi/50.StatefulSet.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: devpi
  namespace: devpi
spec:
  serviceName: devpi
  replicas: 1
  selector:
    matchLabels:
      app: devpi
  template:
    metadata:
      labels:
        app: devpi
    spec:
      serviceAccountName: devpi
      nodeSelector:
        kubernetes.io/os: linux
        kubernetes.io/hostname: s8.ubuntu.home

      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch

      hostAliases:
        - ip: 10.3.1.15
          hostnames:
            - s8.ubuntu.home

      volumes:
        - name: devpi-data
          persistentVolumeClaim:
            claimName: pvc-devpi

      containers:
        - name: devpi
          image: registry.ubuntu.home/docker.io/muccg/devpi:4.5.1
          ports:
            - name: devpi
              containerPort: 3141
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: devpi-data
              mountPath: /data

          readinessProbe:
            httpGet:
              path: /
              port: 3141
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /
              port: 3141
            initialDelaySeconds: 15
            periodSeconds: 20
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      securityContext:
        fsGroup: 999
        fsGroupChangePolicy: OnRootMismatch
      schedulerName: default-scheduler
      hostAliases:
        - ip: 10.3.1.15
          hostnames:
            - s8.ubuntu.home
  serviceName: devpi
  podManagementPolicy: OrderedReady
  updateStrategy:
    type: RollingUpdate
  revisionHistoryLimit: 10
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
