apps/devpi/60.Service.yml
apiVersion: v1
kind: Service
metadata:
  name: devpi
  namespace: devpi
  labels:
    app.kubernetes.io/name: devpi
    app.kubernetes.io/component: devpi
spec:
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: devpi
      port: 3141
      targetPort: devpi
  selector:
    name: devpi
  type: ClusterIP
