apps/devpi/70.Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devpi-ingress
  namespace: devpi
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    prometheus.io/port: '9113'
spec:
  ingressClassName: public
  rules:
  - host: devpi.prod.k8s.home
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: devpi
              port:
                number: 3141
